tests/sumo/errors/person/unconnected_stops_same_edge/errors.sumo
Warning: Disconnected plan for person 'p0' (stop range 29.80-30.00 does not cover previous arrival position 10.00).
Warning: Disconnected plan for person 'p0' (stop range 39.80-40.00 does not cover previous arrival position 10.00).
